# UltraAI-Native-Operatingshell

./: .gitignore  .gitignore.txt  .ultra.context-diff.json  .ultra.context.json  .ultra.context.prev.json  .ultra.db  CMakeLists.txt  Stability-tasks.txt  Structure.txt  ULTRA_KERNEL_SPEC.md  build_errors.txt  build_errors_utf8.txt  prompt.txt  test_patch.diff  ultra.json  ultra_graph.dot
.ultra/: model_routing.json  models.json
.ultra/ai/: core.idx  deps.tbl  files.tbl  symbols.tbl
.ultra/branches/: metadata.json
.ultra/calibration/: weights.json
.ultra/graph/: manifest.gman
.ultra/runtime/: daemon.pipe  daemon.sock  daemon_heartbeat  daemon_heartbeat.tmp-15920
include/ast/: AstExtractor.h  AstTypes.h
include/context/: ContextSnapshot.h
include/ultra/: ultra.h
include/utils/: FileClassifier.h
src/: .ultra.db  main.cpp
src/adapters/: AdapterCommandRunner.cpp  AdapterCommandRunner.h  AdapterFactory.cpp  AdapterFactory.h  CMakeAdapter.cpp  CMakeAdapter.h  FallbackAdapter.cpp  FallbackAdapter.h  ProjectAdapter.h  ReactAdapter.cpp  ReactAdapter.h  RustAdapter.cpp  RustAdapter.h
src/ai/: AIContextGenerator.cpp  AIContextGenerator.h  AgentExportBuilder.cpp  AgentExportBuilder.h  AiRuntimeManager.cpp  AiRuntimeManager.h  BinaryIndexReader.cpp  BinaryIndexReader.h  BinaryIndexWriter.cpp  BinaryIndexWriter.h  ChangeTracker.cpp  ChangeTracker.h  DependencyTable.cpp  DependencyTable.h  FileRegistry.cpp  FileRegistry.h  Hashing.cpp  Hashing.h  IntegrityManager.cpp  IntegrityManager.h  RuntimeState.h  SemanticExtractor.cpp  SemanticExtractor.h  StructureExtractor.cpp  StructureExtractor.h  SymbolTable.cpp  SymbolTable.h
src/api/: ApiRegistry.cpp  ApiRegistry.h  CognitiveKernelAPI.cpp  CognitiveKernelAPI.h  IApiConnector.h  StructuredResponse.h
src/ast/: AstExtractor.cpp  AstExtractorLibClang.cpp
src/authority/: CommitCoordinator.cpp  CommitCoordinator.h  ContextSliceProvider.cpp  ContextSliceProvider.h  IntentSimulator.cpp  IntentSimulator.h  RiskEvaluator.cpp  RiskEvaluator.h  UltraAuthorityAPI.cpp  UltraAuthorityAPI.h
src/calibration/: BiasAdjuster.cpp  BiasAdjuster.h  PatternDetector.cpp  PatternDetector.h  UsageTracker.cpp  UsageTracker.h  WeightManager.cpp  WeightManager.h  WeightTuner.cpp  WeightTuner.h
src/cli/: CLIEngine.cpp  CLIEngine.h  CommandOptions.h  CommandOptionsParser.cpp  CommandOptionsParser.h  CommandRouter.cpp  CommandRouter.h  InitCommand.cpp  InitCommand.h  OutputFormatter.cpp  OutputFormatter.h  UniversalCLI.cpp  UniversalCLI.h
src/config/: ConfigLoader.cpp  ConfigLoader.h
src/context/: ContextSnapshot.cpp
src/core/: .ultra.db  ConfigManager.cpp  ConfigManager.h  ErrorClassifier.cpp  ErrorClassifier.h  Logger.cpp  Logger.h  ProjectType.h  ProjectTypeDetector.cpp  ProjectTypeDetector.h  state_manager.cpp  state_manager.h
src/diff/: BranchSemanticDiff.h  ContractBreak.h  DeltaReport.h  DiffEngine.cpp  DiffEngine.h  ImpactAnalyzer.cpp  ImpactAnalyzer.h  ImpactReport.h  RiskReport.h  RiskScorer.cpp  RiskScorer.h  SignatureDiff.cpp  SignatureDiff.h  SymbolDelta.h  SymbolDiff.cpp  SymbolDiff.h
src/engine/: .ultra.db  scanner.cpp  scanner.h  weight_engine.cpp  weight_engine.h
src/graph/: DependencyGraph.cpp  DependencyGraph.h  IncludeParser.cpp  IncludeParser.h
src/hashing/: HashManager.cpp  HashManager.h
src/incremental/: IncrementalAnalyzer.cpp  IncrementalAnalyzer.h
src/indexing/: IndexingService.cpp  IndexingService.h
src/intelligence/: Branch.h  BranchEvictionPolicy.cpp  BranchEvictionPolicy.h  BranchIdGenerator.cpp  BranchIdGenerator.h  BranchLifecycle.cpp  BranchLifecycle.h  BranchPersistence.cpp  BranchPersistence.h  BranchRetentionCalculator.cpp  BranchRetentionCalculator.h  BranchState.h  BranchStore.cpp  BranchStore.h  DeterministicSequence.h  ExecutionGraph.cpp  ExecutionGraph.h  ExecutionNode.h
src/ipc/: ipc_transport_named_pipe.cpp  ipc_transport_uds.cpp  ultra_ipc_client.cpp  ultra_ipc_server.cpp
src/language/: AdapterFactory.cpp  AdapterFactory.h  CppAdapter.cpp  CppAdapter.h  ILanguageAdapter.h
src/memory/: .ultra.db  CognitiveMemoryManager.cpp  CognitiveMemoryManager.h  EmbeddingIndex.h  EpisodicMemory.cpp  EpisodicMemory.h  FlatEmbeddingIndex.cpp  HotSlice.cpp  HotSlice.h  SemanticMemory.cpp  SemanticMemory.h  SnapshotChain.cpp  SnapshotChain.h  SnapshotPersistence.cpp  SnapshotPersistence.h  StateEdge.h  StateGraph.cpp  StateGraph.h  StateNode.h  StateSnapshot.h  StrategicMemory.cpp  StrategicMemory.h  TemporalIndex.cpp  TemporalIndex.h  lru_manager.cpp  lru_manager.h
src/metacognition/: .ultra.db  MetaCognitiveOrchestrator.cpp  MetaCognitiveOrchestrator.h
src/metrics/: PerformanceMetrics.cpp  PerformanceMetrics.h
src/orchestration/: BranchOrchestrator.cpp  BranchOrchestrator.h  ConfidenceScorer.cpp  ConfidenceScorer.h  IDecomposer.h  IntentDecomposer.cpp  IntentDecomposer.h  MergeController.cpp  MergeController.h  RuleBasedDecomposer.cpp  RuleBasedDecomposer.h  TaskGraph.cpp  TaskGraph.h
src/patch/: DiffParser.cpp  DiffParser.h  PatchManager.cpp  PatchManager.h
src/protocol/: JsonRpcServer.cpp  (+1 more)
test-cpp/: CMakeLists.txt  ultra.config.json
tests/: .ultra.db  CMakeLists.txt  InitCommandTests.cpp  SanityTest.cpp  test_api_registry.cpp  test_bias_adjuster.cpp  test_branch.cpp  test_branch_lifecycle.cpp  test_branch_orchestrator.cpp  test_branch_persistence.cpp  test_branch_store.cpp  test_change_tracker.cpp  test_cognitive_memory.cpp  test_confidence.cpp  test_confidence_scorer.cpp  test_context_builder.cpp  test_context_compression.cpp  test_context_extractor.cpp  test_cpu_governor.cpp  test_delta.cpp  test_dependency_graph.cpp  test_determinism.cpp  test_diff_engine.cpp  test_diff_parser.cpp  test_execution_graph.cpp  test_execution_kernel.cpp  test_execution_node.cpp  test_graph_store.cpp  test_hash_manager.cpp  test_hashing.cpp  test_hot_slice.cpp  test_hot_slice_calibration.cpp  test_impact_analyzer.cpp  test_impact_prediction.cpp  test_incremental_analyzer.cpp  test_integrity_manager.cpp  test_intent_runtime.cpp  test_ipc_runtime.cpp  test_memory_governance.cpp  test_merge_controller.cpp  (+24 more)
(+213 files in other folders)
